deformation/jitfailure-dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e/error.log
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp: In member function ‘virtual void dolfin::dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp:69:29: error: ‘y’ was not declared in this scope
           values[0] = tlb*((y)/(L1-0.75))*((y)/(L1-0.75))+(delta_t-tlb)*((y)/(L1-0.75));
                             ^
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp:69:29: note: suggested alternative: ‘yn’
           values[0] = tlb*((y)/(L1-0.75))*((y)/(L1-0.75))+(delta_t-tlb)*((y)/(L1-0.75));
                             ^
                             yn
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp: In member function ‘virtual double dolfin::dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e::get_property(std::__cxx11::string) const’:
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp:82:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "delta_t") return delta_t;          if (name == "delta_r") return delta_r;          if (name == "L1") return L1;          if (name == "Lt") return Lt;          if (name == "Lr") return Lr;          if (name == "pt") return pt;          if (name == "pr") return pr;          if (name == "tlb") return tlb;
           ^~
/tmp/tmp0novh6yo/dolfin_expression_871d1cfbc52d8c773eeff5b34c617b7e.cpp:82:59: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "delta_t") return delta_t;          if (name == "delta_r") return delta_r;          if (name == "L1") return L1;          if (name == "Lt") return Lt;          if (name == "Lr") return Lr;          if (name == "pt") return pt;          if (name == "pr") return pr;          if (name == "tlb") return tlb;
                                                           ^~
